--- a/index.html
+++ b/index.html
@@ -11,10 +11,19 @@
 
 <body>
   <!-- partial:index.partial.html -->
+
+  <!--this span is required for the color gradient to show up.-->
+  <span style="color:yellow">a</span>
+
   <div class="search-container">
     <input type="text" name="fruit" id="fruit" placeholder="Search fruit 🍎">
     <div class="suggestions">
-      <ul></ul>
+      <span>
+        <div>Apple</div>
+        <div>Orange</div>
+        <div>Grape</div>
+        <div>Watermelon</div>
+      </span>
     </div>
   </div>
   <!-- partial -->
